# ansible-compat

./: .flake8  .gitignore  .packit.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .pylintrc  .readthedocs.yml  .taplo.toml  README.md  ansible.cfg  codecov.yml  constraints.txt  cspell.config.yaml  mkdocs.yml  mypy.ini  package-lock.json  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.config/: ansible-compat.spec  constraints.txt  dictionary.txt  pydoclint-baseline.txt  python3-ansible-compat.spec  requirements-docs.in  requirements-test.in  requirements.in  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ack.yml  release.yml  tox.yml
docs/: api.md  conf.py  examples.md  index.md  requirements.in  requirements.txt
examples/reqs_broken_yaml/: requirements.yaml
examples/reqs_v1/: requirements.yml
examples/reqs_v1_yaml/: requirements.yaml
examples/reqs_v2/: requirements.yml
examples/reqs_v2_yaml/: requirements.yaml
rpm/: python-ansible-compat.spec.in
src/ansible_compat/: __init__.py  _compat.py  compatibility.py  config.py  constants.py  errors.py  loaders.py  ports.py  prerun.py  roles.py  runtime.py  schema.py  types.py  utils.py
src/ansiblecompat/: __init__.py
test/: __init__.py  conftest.py  test_api.py  test_compatibility.py  test_config.py  test_configuration_example.py  test_loaders.py  test_prerun.py  test_roles.py  test_runtime.py  test_runtime_example.py  test_runtime_scan_path.py  test_schema.py  test_types.py  test_version.py
test/assets/: requirements-invalid-collection.yml  requirements-invalid-role.yml  validate0_data.json  validate0_expected.json  validate0_schema.json
test/assets/layouts/legacy_fail/: requirements.yml
test/collections/acme.broken/: galaxy.yml
test/collections/acme.goodies/: galaxy.yml
test/collections/acme.goodies/molecule/default/: converge.yml
test/collections/acme.goodies/roles/baz/molecule/deep_scenario/: converge.yml
test/collections/acme.goodies/tests/: requirements.yml
test/collections/acme.minimal/: galaxy.yml
test/roles/acme.missing_deps/: requirements.yml
test/roles/acme.missing_deps/meta/: main.yml
test/roles/acme.sample2/meta/: main.yml
test/roles/ansible-role-sample/meta/: main.yml
test/roles/sample4/meta/: main.yml
tools/: build-rpm.sh  get-version.sh  smoke.py  smoke.sh  update-spec.sh  update-version.sh
