[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = ansible-compat
url = https://github.com/ansible-community/ansible-compat
project_urls =
  Bug Tracker = https://github.com/ansible-community/ansible-compat/issues
  CI: GitHub = https://github.com/ansible-community/ansible-compat/actions?query=workflow:gh+branch:master+event:push
  Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
  Source Code = https://github.com/ansible-community/ansible-compat
description = Ansible compatibility goodies
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sorin Sbarnea
author_email = ssbarnea@redhat.com
maintainer = Sorin Sbarnea
maintainer_email = ssbarnea@redhat.com
license = MIT
license_file = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Environment :: Console

  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators

  Operating System :: OS Independent

  License :: OSI Approved :: MIT License
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: Jython
  Programming Language :: Python :: Implementation :: PyPy

  Topic :: Software Development :: Bug Tracking
  Topic :: Software Development :: Quality Assurance
  Topic :: Software Development :: Testing

  Topic :: Utilities
keywords =
  ansible
  lint

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find:
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm>=1.15.0
  setuptools_scm_git_archive>=1.0

# These are required in actual runtime:
; install_requires =

[options.extras_require]
test =
  pytest
  pytest-cov

[options.packages.find]
where = src

[options.package_data]
ansiblelint = py.typed

[codespell]
skip = .tox,.mypy_cache,build,.git,.eggs,pip-wheel-metadata
