[metadata]
name = ansible-compat
url = https://github.com/ansible-community/ansible-compat
project_urls =
  Bug Tracker = https://github.com/ansible-community/ansible-compat/issues
  CI: GitHub = https://github.com/ansible-community/ansible-compat/actions?query=workflow:gh+branch:main+event:push
  Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
  Source Code = https://github.com/ansible-community/ansible-compat
  Documentation = https://ansible-compat.readthedocs.io/
description = Ansible compatibility goodies
long_description = file: README.md
long_description_content_type = text/markdown
author = Sorin Sbarnea
author_email = ssbarnea@redhat.com
license = MIT
license_file = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Environment :: Console

  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators

  Operating System :: OS Independent

  License :: OSI Approved :: MIT License
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: Jython
  Programming Language :: Python :: Implementation :: PyPy

  Topic :: Software Development :: Bug Tracking
  Topic :: Software Development :: Quality Assurance
  Topic :: Software Development :: Testing

  Topic :: Utilities
keywords =
  ansible

[options]
use_scm_version = True
python_requires = >=3.8
package_dir =
  = src
packages = find:
zip_safe = False

# These are required in actual runtime:
install_requires =
  PyYAML
  subprocess-tee >= 0.3.5
  jsonschema >= 4.5.1

[options.extras_require]
docs =
  sphinx-autobuild>=0.7.1,<1.0
  sphinx>=4.2.0,<5.0
  sphinx_ansible_theme
  myst_parser
test =
  coverage
  flaky
  pip-tools
  pytest
  pytest-markdown
  pytest-mock
  pytest-plus

[options.packages.find]
where = src

[options.package_data]
ansible_compat = py.typed

[codespell]
skip = .tox,.mypy_cache,build,.git,.eggs,pip-wheel-metadata
